# mdebug

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REGISTERS  TODO.md  autocomplete.zsh  cmake-variants.yaml  configure-dev.sh  devsetup.sh  mdbuild  test-vector-resolver.js
blog/: architecture.md  commands_system.md  concurrency.md  dap_requests.md  driver_tests.md  eh_frame.md  elves_and_dwarves.md  ideas_new_remote_protocol.md  mdb-js.md  mdb.md  stack_unwinding.md  why_debugger.md
cmake/: AddTest.cmake  QuickJs.cmake  StageRR.cmake
docs/: build.md  mainpage.md  usage.md
generate/: dap_requests.py  distorm_cmake.txt  syscalls.py
lib/binlog/: CMakeLists.txt  Config.cmake.in
lib/binlog/include/binlog/: encoding.h  logger.h
lib/binlog/scripts/: format_indexer.py
lib/binlog/src/: logger.cpp
lib/binlog/tools/decoder/: decoder.cpp  decoder.h  main.cpp
lib/json/: CMakeLists.txt
lib/json/examples/: CMakeLists.txt
lib/json/tests/: CMakeLists.txt  tests.cpp
setup/: pre-commit
src/: app.cpp  app.h  arch.h  awaiter.cpp  awaiter.h  bp.cpp  bp.h  bp_defs.h  bp_spec.cpp  bp_spec.h  breakpoint.cpp  breakpoint.h  common.cpp  common.h  event_queue.cpp  event_queue.h  event_queue_event_param.h  event_queue_types.h  log.h  main.cpp  mdb_config.cpp  mdb_config.h  notify_pipe.cpp  notify_pipe.h  ptrace.cpp  ptrace.h  ptracestop_handlers.cpp  ptracestop_handlers.h  register_description.cpp  register_description.h  session_task_map.cpp  session_task_map.h  so_loading.cpp  so_loading.h  supervisor.cpp  supervisor.h  target.cpp  target.h  task.cpp  task.h  (+8 more)
src/common/: formatter.h  macros.h  panic.cpp  panic.h  traits.h  typedefs.h
src/configuration/: command_line.cpp  command_line.h  config.cpp  config.h
src/dbgevents/: event.h
src/defs/: dwarf.defs  elf.defs  log_channels.defs  registers.defs  waitstatus.def  x86_64.defs
src/eval/: eval.cpp  eval.h
src/events/: event.cpp  event.h  stop_event.h
src/interface/: attach_args.h  console_command.cpp  console_command.h  event_handler_stack.h  pty.cpp  pty.h  ui_command.h  ui_result.h
src/jobs/: dwarf_unit_data.cpp  dwarf_unit_data.h  index_die_names.cpp  index_die_names.h
src/lib/: arena_allocator.cpp  arena_allocator.h  lockguard.h  spinlock.cpp  spinlock.h  stack.h  string_map.h  vector.h
src/mdbjs/: bpjs.cpp  bpjs.h  event_dispatcher.cpp  event_dispatcher.h  framejs.cpp  framejs.h  include-quickjs.h  js.init.h  jsobject.h  macros.h  mdbjs.cpp  mdbjs.h  supervisorjs.cpp  supervisorjs.h  taskinfojs.cpp  taskinfojs.h  util.cpp  util.h  value_resolver_registry.cpp  value_resolver_registry.h  variablejs.cpp  variablejs.h
src/mdbsys/: ptrace.cpp  ptrace.h  stop_status.h
src/posix/: argslist.cpp  argslist.h
src/symbol/: block.cpp  block.h  callstack.cpp  callstack.h  cu.cpp  cu_file.cpp  cu_file.h  disassemble.cpp  disassemble.h  dwarf.cpp  dwarf.h  dwarf_defs.h  dwarf_expressions.cpp  dwarf_expressions.h  dwarf_frameunwinder.cpp  dwarf_frameunwinder.h  elf.cpp  elf.h  elf_symbols.cpp  elf_symbols.h  lnp.h  objfile.cpp  objfile.h  so_loading.cpp  so_loading.h  type.cpp  type.h
src/symbolication/: addr_sorter.h  block.cpp  block.h  callstack.cpp  callstack.h  cu.cpp  cu.h  cu_file.cpp  cu_file.h  cu_symbol_info.cpp  cu_symbol_info.h  debug_str.cpp  debug_str.h  disassemble.cpp  disassemble.h  dwarf.cpp  dwarf.h  dwarf_attribute_value.h  dwarf_binary_reader.cpp  dwarf_binary_reader.h  dwarf_defs.h  dwarf_expressions.cpp  dwarf_expressions.h  dwarf_frameunwinder.cpp  dwarf_frameunwinder.h  dwarf_utility.h  elf.cpp  elf.h  elf_symbols.h  fnsymbol.cpp  fnsymbol.h  lnp.cpp  lnp.h  objfile.cpp  objfile.h  source_file.cpp  source_file.h  type.cpp  type.h  value.cpp  (+6 more)
src/tasks/: dwarf_unit_data.cpp  dwarf_unit_data.h  index_die_names.cpp  index_die_names.h  lnp.cpp  lnp.h
src/tracee/: util.cpp  util.h
src/user_commands/: commands.cpp  commands.h
src/utils/: algorithm.h  base64.cpp  base64.h  binlog_integration.h  byte_buffer.cpp  byte_buffer.h  command.h  debug_value.h  debugger_thread.cpp  debugger_thread.h  dynamic_array.h  enumerator.h  expected.h  filter.h  fmt_join.h  format_utils.h  immutable.h  indexing.h  interval_map.h  leak_vector.h  locked_ptr.h  log_channel.h  logger.cpp  logger.h  macros.h  pipes.h  primopt.h  ref_ptr.h  (+21 more)
test/: CMakeLists.txt  avx-subject.cpp  basetypes.cpp  driver-test-subjects  dynamicLoading.cpp  dynamic_lib.cpp  dynamic_lib.h  export_tests.js  forever.cpp  fork.cpp  functionBreakpoints.cpp  helloworld.cpp  lib_shared.cpp  mandelbrot.cpp  next.cpp  pause.cpp  pmr.cpp  readMemory.cpp  signals.cpp  spinlock.cpp  spinlock.hpp  stackframes.cpp  stupid_shared.cpp  threads.cpp  threads_shared.cpp  todo.cpp  todo.h  variables.cpp
test/driver/: attach.js  attachRequest.js  breakpoints.js  breakpointsRequests.js  client.js  disassemble.js  disassembleRequest.js  disconnect.js  evaluateRequest.js  exited.js  exitedEvent.js  finish.js  finishRequest.js  initialize.js  initializeRequest.js  launch.js  launchRequest.js  moduleEvent.js  next.js  nextInstruction.js  nextLine.js  nextRequest.js  pause.js  pauseRequest.js  readMemory.js  readMemoryRequest.js  run.js  runDebugAdapterTest.js  setBreakpoints.js  setInstructionBreakpoints.js  stackframes.js  stacktraceRequest.js  threadExited.js  threadExitedEvent.js  threads.js  threadsRequest.js  types.d.ts  unwinder.js  utils.js  variables.js  (+2 more)
test/gdbserver/: gdbserver_repl.js
test/include/: game.h  inheritance.h  people.h
test/lnp/: a.cpp  a.h  b.cpp  b.h  main.cpp  person.h
test/subjects/events/: output.cpp
test/subjects/multiprocess/: childprogram.cpp  parent.cpp
test/subjects/variablesRequest/: arrayOf3.cpp  pointer.cpp  struct.cpp
test/templated_code/: template.h  template_foo.cpp  template_foo.h  template_main.cpp
test/unittest/: base64.cpp  binlog_test.cpp  elf_sec_names.cpp  expected_tests.cpp  libxul_debug_frame  parse_cf.cpp  parse_dap_requests.cpp  sf_ehframe  threads_ehframe  threads_ehframe_header  util_testing.cpp  xml_tests.cpp
tooling/: metadata.py  ptrace_generate.py
(+112 files in other folders)
